--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "skipLibCheck": true,
       "allowJs": true,
       "baseUrl": ".",
+      "outDir": "./dist",
       "paths": {
           "@/*": ["./src/"],
 
