--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,41 @@
 version: '3'
+
 services:
-    mega_frontend__vite:
+    frontend:
         build:
             context: .
             dockerfile: Dockerfile
+        restart: always
         ports:
             - '80:80'
-        restart: always
+        networks:
+            - web
+        environment:
+            - NODE_ENV=production
+
+    nginx:
+        image: nginx:latest
+        volumes:
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/www:/var/www/certbot
+        ports:
+            - '80:80'
+            - '443:443'
+        depends_on:
+            - frontend
+        networks:
+            - web
+
+    certbot:
+        image: certbot/certbot
+        volumes:
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/www:/var/www/certbot
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $!; done;'"
+        networks:
+            - web
+
+networks:
+    web:
+        external: true
