--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name mega-constructing.ru www.mega-constructing.ru;
 
     location / {
-        proxy_pass http://127.0.0.1:8080;  # Указываем порт, который использует контейнер
+        proxy_pass http://frontend:80;  # Используем имя сервиса из Docker Compose
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,7 +23,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/mega-constructing.ru/privkey.pem;
 
     location / {
-        proxy_pass http://127.0.0.1:8080;  # Прокси на порт контейнера
+        proxy_pass http://frontend:80;  # Прокси на сервис внутри Docker сети
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
