--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name mega-constructing.ru www.mega-constructing.ru;
+    server_name megaconstructing.ru www.megaconstructing.ru;
 
     location / {
         proxy_pass http://frontend:80;  # Используем имя сервиса из Docker Compose
@@ -17,10 +17,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name mega-constructing.ru www.mega-constructing.ru;
+    server_name megaconstructing.ru www.megaconstructing.ru;
 
-    ssl_certificate /etc/letsencrypt/live/mega-constructing.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mega-constructing.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/megaconstructing.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/megaconstructing.ru/privkey.pem;
 
     location / {
         proxy_pass http://frontend:80;  # Прокси на сервис внутри Docker сети
