fix: configs again

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name megaconstructing.ru www.megaconstructing.ru;
 
     location / {
-        proxy_pass http://frontend:80;  # Используем имя сервиса из Docker Compose
+        proxy_pass http://frontend:80;  # Используем имя контейнера для проксирования запросов на frontend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,7 +23,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/megaconstructing.ru/privkey.pem;
 
     location / {
-        proxy_pass http://frontend:80;  # Прокси на сервис внутри Docker сети
+        proxy_pass http://frontend:80;  # Проксируем запросы на приложение
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
