--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,8 @@ services:
             context: .
             dockerfile: Dockerfile
         restart: always
-        # Убрал проброс порта, так как Nginx будет проксировать
-        # ports:
-        #     - '8080:80'
+        ports:
+            - '8080:80' # Внешний порт 8080, внутренний порт 80
         networks:
             - web
         environment:
@@ -16,13 +15,14 @@ services:
 
     nginx:
         image: nginx:latest
+        restart: always
+        ports:
+            - '80:80' # HTTP
+            - '443:443' # HTTPS
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-            - ./certbot/conf:/etc/letsencrypt
-            - ./certbot/www:/var/www/certbot
-        ports:
-            - '80:80'
-            - '443:443'
+            - ./certbot/conf:/etc/letsencrypt # SSL сертификаты
+            - ./certbot/www:/var/www/certbot # Certbot будет сохранять свои файлы для проверки здесь
         depends_on:
             - frontend
         networks:
@@ -39,4 +39,4 @@ services:
 
 networks:
     web:
-        external: true
+        external: true # Используем общую сеть, если она уже создана
